Fix horizontal scrolling.

--- a/src/Squidex/app/theme/_lists.scss
+++ b/src/Squidex/app/theme/_lists.scss
@@ -208,7 +208,7 @@
     }
 
     &-time {
-        @include force-width(160px);
+        @include force-width(180px);
     }
 
     &-actions {
